--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <title>Wallet App</title>
   </head>
   <body>
+    <div id = 'app'></div>
+    <script src = 'index.min.js'></script>
   </body>
 
 </html>
